
	This file is in Unicode charset, with UTF-8 encoding.

	Sections headed '[Incompat <version>]' and '[Major <version>]'
	are particularly important.  They describe changes that are
	incompatible with earlier releases or are significantly
	different.

	!!!!!!!! READ THE RELEASE.NOTES !!!!!!!!

-------------------------------------------------------------------------------

	2015-10-10

	* Fix build with C89 compilers.

	* Fix several memory leaks.

	* Fix an out-of-bounds memory read in maint.c's discard_token().
	  Found with clang 3.6's address sanitizer.

	2015-02-28

	* Fix the lexer to not try to delete parts from HTML tokens if it is
	  reading garbage (for instance, binary files misdeclared as HTML).
	  This was exposed on Fedora 20 and 21 but not Ubuntu 14.04 (x86_64),
	  and is possibly related to its newer flex 2.5.37 that may have
	  changed the way it uses yyinput() a bit.  Reported by Matt Garretson.

	2015-02-25

	* Fix the lexer to handle MIME multipart messages properly when the
	  boundary ended in "--".  The parser would previously never find the
	  MIME parts because it mistook all boundaries ending in two dashes to
	  be the final boundary of the multipart, rather than checking if the
	  two dashes were extra.  Add a test case, t.lexer.boundary--.
	  Reported by Matt Garretson to the bogofilter mailing list today.

	2014-07-10

	* Take patch from Julius Plenz to fix a bug in the charset converter
	  that causes truncation of messages in pass-through mode in rare
	  circumstances, for instance, if binary data is misdeclared as
	  text/html.  Also add his test case, t.passthrough-truncation.

	2013-11-30

	* Updated autoconf/automake stuff so that tests work properly with
	  automake versions that default to running parallel-tests.

	2013-07-06

	* Relicensed all security announcements under a dual-license, at the
	  user's option, to ease distribution without repackaging:

	  - Creative Commons Attribution-NoDerivs 3.0 Germany License